@@ -1,3 +1,5 @@
+  - added $cacheable-parameter with default=true to register_function()
+    and register_block() (messju)
   - add math speedup to core (Dominik, Monte)
   - fix newlines for tags without template output (Monte)
   - added config-option "request_use_auto_globals" to make auto-globals be
